--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,22 +12,31 @@ Django==5.2.7
 django-appconf==1.1.0
 django-celery-email==3.0.0
 django-cors-headers==4.9.0
+django-jet-reboot==1.3.10
 django-ratelimit==4.1.0
 django-restframework==0.0.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+google-api-python-client==1.4.1
+httplib2==0.31.0
 kombu==5.5.4
 mysqlclient==2.2.7
+oauth2client==4.1.3
 packaging==25.0
 pillow==11.3.0
 prompt_toolkit==3.0.52
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 PyJWT==2.10.1
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 redis==6.4.0
 reportlab==4.4.4
+rsa==4.9.1
 six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
+uritemplate==4.2.0
 vine==5.1.0
 wcwidth==0.2.14
